Issue #1309: Use CSS to truncate long paths instead of PHP.

--- a/core/modules/views_ui/css/views_ui.admin.css
+++ b/core/modules/views_ui/css/views_ui.admin.css
@@ -353,6 +353,14 @@
   max-width: 100%;
 }
 
+#views-page-path {
+  display: inline-block;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 100%;
+}
+
 /* @end */
 
 /* @group Settings forms */
